atualizando tela celular

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     e escapamentos esportivos. Apesar do relacionamento familiar, a empresa não é, e nunca foi, da Honda
                     Motor Company.</p>
                     <picture>
-                        <!--<source media="(max-width: 612px)" srcset="imagens/.png" type="image/png">-->
+                        <source media="(max-width: 612px)" srcset="imagens/civic-200.png" type="image/png">
                         <source media="(max-width: 712px)" srcset="imagens/civic-300.png" type="image/png">
                         <source media="(max-width: 1001px)" srcset="imagens/civic-500.png" type="image/png">
                         <source media="(max-width: 1427px)" srcset="imagens\civic-700.png" type="image/png">
