--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </main>
 
     <footer>
-        <p>Criado por Zezo LTDA</p>
+        <p>Criado por Henrique</p>
     </footer>
     
 </body>
